--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ sourcecode: "https://github.com/gchauras/much-worse-jekyll-theme"
 permalink: blog/:year/:month/:day/:title
 exclude: ["Makefile", "README.md"]
 
-url: "https://xmaceska.github.io/Madhouse/"     # the base hostname & protocol for your site
-baseurl: "https://xmaceska.github.io/Madhouse/"                   # the subpath of your site, e.g. /blog
+url: "https://github.com/XMaceska/Madhouse.git"     # the base hostname & protocol for your site
+baseurl: ""                   # the subpath of your site, e.g. /blog
 
 author:
     name:
