--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: David 
-description: Personal website
+title: HOME
+description: ""
 sourcecode: "https://github.com/gchauras/much-worse-jekyll-theme"
 
 permalink: blog/:year/:month/:day/:title
