--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink: blog/:year/:month/:day/:title
 exclude: ["Makefile", "README.md"]
 
 url: "https://github.com/XMaceska/Madhouse.git"     # the base hostname & protocol for your site
-baseurl: "https://xmaceska.github.io/Madhouse/"                   # the subpath of your site, e.g. /blog
+baseurl: "https://xmaceska.github.io/Madhouse"                   # the subpath of your site, e.g. /blog
 
 author:
     name:
